--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -70,7 +70,7 @@
 		<th style="border-right:3px #CFAA9E solid; width: 24%;">說明</th>
 	</tr>
 	<tr>
-		<td style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid; width: 7%;" rowspan="5">一般系所</td>
+		<td style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid; width: 7%;" rowspan="5">一<br/>般<br/>系<br/>所</td>
 		<td style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid; width: 14%;">欲使用名額（A）</td>
 		<td class="bachelor" style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;"><input class="form-control" type="number" min="0" id="bachelor_quota_used" ></td>
 		<td class="master" style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;"><input class="form-control" type="number" min="0" id="master_quota_used" ></td>
