--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -260,16 +260,24 @@
 		<th rowspan="2">其餘科系可使用名額<br/>（I=E-H）</th>
 	</tr>
 	<tr>
-		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;">個人申請名額</td>
-		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;">聯合分發名額</td>
-		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;">單獨招生名額</td>
+		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;">招生管道</td>
+		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;">各管道分配名額</td>
+		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;" >招生名額小計（H）</td>
 	</tr>
 	<tr>
-		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;"><input class="form-control" id="bachelor_quota_sum" disabled></td>
+		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;" rowspan="3"><input class="form-control" id="bachelor_quota_sum" disabled></td>
+		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;">個人申請</td>
 		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;"><input type="number" min="0" class="form-control" id="quota_medicine_selection" disabled></td>
+		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;" rowspan="3"><input class="form-control" id="medicine_quota_sum" disabled></td>
+		<td style="border-top:3px #D499B9 solid;" rowspan="3"><input class="form-control" id="bachelor_except_medicine_quota_sum" disabled></td>
+	</tr>
+	<tr>
+		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;">聯合分發</td>
 		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;"><input type="number" min="0" class="form-control" id="quota_medicine_placement" disabled></td>
+	</tr>
+	<tr>
+		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;">單獨招生</td>
 		<td style="border-right:3px #D499B9 solid; border-top:3px #D499B9 solid;"><input type="number" min="0" class="form-control" id="quota_medicine_self" disabled></td>
-		<td style="border-top:3px #D499B9 solid;"><input class="form-control" id="bachelor_except_medicine_quota_sum" disabled></td>
 	</tr>
 </table>
 
