修改是否可以流用判斷

--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -30,7 +30,7 @@
 		<th class="phd" style="border-right:3px #622fa5 solid; width: 20%;">博士班</th>
 	</tr>
 	<tr>
-		<td style="border-right:3px #622fa5 solid; border-top:3px #622fa5 solid; "><%= year -1911%> 學年度<br/>本地生核定總量核定總量</td>
+		<td style="border-right:3px #622fa5 solid; border-top:3px #622fa5 solid; "><%= year -1911%> 學年度<br/>本地生核定總量</td>
 		<td class="bachelor" style="border-right:3px #622fa5 solid; border-top:3px #622fa5 solid;" id="bachelor_total_amount"></td>
 		<td class="master" style="border-right:3px #622fa5 solid; border-top:3px #622fa5 solid;"id="master_total_amount"></td>
 		<td class="phd" style="border-top:3px #622fa5 solid;"id="phd_total_amount"></td>
@@ -42,10 +42,10 @@
 		<td class="phd" style="border-top:3px #622fa5 solid;"id="phd_amount"></td>
 	</tr>
 	<tr>
-		<td style="border:4px rgb(255, 60, 0) solid; font-weight: bold; font-size:1.1rem; color:rgb(255, 60, 0)">Y：一般系所之外加10%名額數</td>
-		<td class="bachelor" style="border:4px rgb(255, 60, 0) solid; font-size:1.1rem; "id="bachelor_admission_amount"></td>
-		<td class="master" style="border:4px rgb(255, 60, 0) solid; font-size:1.1rem; "id="master_admission_amount"></td>
-		<td class="phd" style="border:4px rgb(255, 60, 0) solid; font-size:1.1rem; "id="phd_admission_amount"></td>
+		<td style="border:4px #ff3c00 solid; font-weight: bold; font-size:1.1rem; color:#ff3c00">Y：一般系所之外加10%名額數</td>
+		<td class="bachelor" style="border:4px #ff3c00 solid; font-size:1.1rem; "id="bachelor_admission_amount"></td>
+		<td class="master" style="border:4px #ff3c00 solid; font-size:1.1rem; "id="master_admission_amount"></td>
+		<td class="phd" style="border:4px #ff3c00 solid; font-size:1.1rem; "id="phd_admission_amount"></td>
 	</tr>
 	<tr>
 		<td style="border-right:3px #622fa5 solid; border-top:3px #622fa5 solid; ">Z：重點產業系所之外加10%名額數</td>
