登入畫面下方連結及文字修改

--- a/login.ejs
+++ b/login.ejs
@@ -73,11 +73,11 @@
 						113 學年度僑、港澳生招生管道說明及管道圖
 					</a>
 				</li>
-				<!-- <li class="list-group-item">
-					<a target="_blank" href="https://docs.google.com/presentation/d/10sKTMXm9VLUdhg-Y8OfN-MRosvmanv-O/edit?usp=sharing&ouid=112204737523361756979&rtpof=true&sd=true">
-						112 學年度名額暨簡章調查系統操作手冊
+				<li class="list-group-item">
+					<a target="_blank" href="https://docs.google.com/presentation/d/17w0VyTHkmxzWkjD4CA_-lFYz_31p-lrk/edit?usp=drive_link&ouid=112204737523361756979&rtpof=true&sd=true">
+						113 學年度名額暨簡章調查系統操作手冊
 					</a>
-				</li> -->
+				</li>
 				<!-- <li class="list-group-item">
 					<a target="_blank" href="https://bbb.ncnu.edu.tw/b/kcc-wh9-z4q">
 						系統操作問題諮詢視訊會議連結（8/16 上午 10:30）
@@ -93,11 +93,11 @@
 						113招生名額增量申請表
 					</a>
 				</li>
-				<!-- <li class="list-group-item">
-					<a target="_blank" href="https://drive.google.com/drive/folders/1jSJpJCvbVRfVtAOVJFbDlymAPh9f0GIv?usp=sharing">
-						各校上（111）年各學制校系分則規定
+				<li class="list-group-item">
+					<a target="_blank" href="https://drive.google.com/drive/folders/10XF_hZCIMZDRoEGI38wt2cNk_fZF3lp2?usp=drive_link">
+						各校上（112）年各學制校系分則規定
 					</a>
-				</li> -->
+				</li>
 				<li class="list-group-item">
 					<a target="_blank" href="https://drive.google.com/file/d/1tW_J_exxw-H5OHuM37lKWKDLE3_xIxYC/view?usp=sharing">
 						名額暨簡章調查系統忘記密碼申請單
