修正範例欄位顯示

--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -152,7 +152,7 @@
 						<th style="border-right:3px #622fa5 solid; width: 20%;">博士班</th>
 					</tr>
 					<tr>
-						<td style="border-right:3px #622fa5 solid; border-top:3px #622fa5 solid; "><%= year -1911%> 學年度<br/>本地生核定總量核定總量</td>
+						<td style="border-right:3px #622fa5 solid; border-top:3px #622fa5 solid; "><%= year -1911%> 學年度<br/>本地生核定總量</td>
 						<td style="border-right:3px #622fa5 solid; border-top:3px #622fa5 solid;">1534</td>
 						<td style="border-right:3px #622fa5 solid; border-top:3px #622fa5 solid;">616</td>
 						<td style="border-right:3px #622fa5 solid; border-top:3px #622fa5 solid;">104</td>
