修改填寫範例說明顯示
重點產業系所和國際專修部的說明不顯示教育部核定文號

--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -232,14 +232,14 @@
 						<td style="border-right:3px #CFAA9E solid; border-top:6px #CFAA9E solid;"><input class="form-control" type="number" min="0" value="40" disabled></td>
 						<td style="border-right:3px #CFAA9E solid; border-top:6px #CFAA9E solid;"><input class="form-control" type="number" min="0" value="21" disabled></td>
 						<td style="border-right:3px #CFAA9E solid; border-top:6px #CFAA9E solid;"><input class="form-control" type="number" min="0" value="2" disabled></td>
-						<td style="border-top:6px #CFAA9E solid; width: 24%;">依教育部 OOOOOOOOA 函核定</td>
+						<!-- <td style="border-top:6px #CFAA9E solid; width: 24%;">依教育部 OOOOOOOOA 函核定</td> -->
 					</tr>
 					<tr>
 						<td style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;  width: 14%;">國際專修部核定名額數（G）</td>
 						<td style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;"><input class="form-control" type="number" min="0" value="50" disabled></td>
 						<td class="diagonalCrossRight" style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;"><!-- <input class="form-control" type="number" disabled> --></td>
 						<td class="diagonalCrossRight" style="border-right:3px #CFAA9E solid; border-top:3px #CFAA9E solid;"><!-- <input class="form-control" type="number" disabled> --></td>
-						<td style="border-top:3px #CFAA9E solid;">依教育部 OOOOOOOOB 函核定</td>
+						<!-- <td style="border-top:3px #CFAA9E solid;">依教育部 OOOOOOOOB 函核定</td> -->
 					</tr>
 				</table>
 			</div>
@@ -249,9 +249,16 @@
 					學士班實際招生名額為 90 名(原招生名額為 103 名，減去學士班流用名額 13 名)；
 					碩士班實際招生名額為 55 名(原招生名額為 40 名，加上碩士班流用名額 11 名，碩士班本地缺額 4 名)；
 					博士班實際招生名額為 12 名(原招生名額為 8 名，加上博士班流用名額 2 名，申請名額增量 2 名)。
+					重點產業系所實際招生名額，學士班為 40 名、碩士班為 21 名、博士班為 2 名。
+					國際專修部實際招生名額，學士班為 40 名。
+				</textarea>
+				<!-- <textarea class="form-control" rows="5" style="resize:none;" disabled>
+					學士班實際招生名額為 90 名(原招生名額為 103 名，減去學士班流用名額 13 名)；
+					碩士班實際招生名額為 55 名(原招生名額為 40 名，加上碩士班流用名額 11 名，碩士班本地缺額 4 名)；
+					博士班實際招生名額為 12 名(原招生名額為 8 名，加上博士班流用名額 2 名，申請名額增量 2 名)。
 					重點產業系所實際招生名額，學士班為 40 名、碩士班為 21 名、博士班為 2 名，名額依教育部 OOOOOOOOA 函核定。
 					國際專修部實際招生名額，學士班為 40 名，名額依教育部 OOOOOOOOB 函核定。
-				</textarea>
+				</textarea> -->
 			</div>
 		</div>
 	</div>
