--- a/login.ejs
+++ b/login.ejs
@@ -53,10 +53,10 @@
 	<div class="col-md-12">
 		<ul>
 			<li>
-				帳號及密碼前以 111 年 01 月 20 日海聯試字第1113000006號函致送（諒達），請以貴校預設帳號及操作代碼登入。承辦人可於登入系統後自行更改操作代碼。
+				帳號及密碼前以 113 年 5 月 21 日海聯試字第1132000587號函致送（諒達），請以貴校預設帳號及操作代碼登入。承辦人可於登入系統後自行更改操作代碼。
 			</li>
 			<li>
-				回傳方式：確認名額無誤後，於 6 月 9 日（星期五）下午 5 時前，列印「簡章回覆表」並簽章，傳真或掃描電郵至本會（傳真號碼：<a href="tel:+886-49-2911182">049-2911182</a>，電郵信箱：<a href="mailto:overseassurvey@gmail.com">overseassurvey@gmail.com</a>）始完成簡章填報作業。
+				回傳方式：確認名額無誤後，於 113 年 6 月 14 日（星期五）下午 5 時前，列印「簡章回覆表」並簽章，傳真或掃描電郵至本會（傳真號碼：<a href="tel:+886-49-2911182">049-2911182</a>，電郵信箱：<a href="mailto:overseassurvey@gmail.com">overseassurvey@gmail.com</a>）始完成簡章填報作業。
 			</li>
 		</ul>
 	</div>
@@ -70,14 +70,14 @@
 			<ul class="list-group list-group-flush">
 				<li class="list-group-item">
 					<a target="_blank" href="https://drive.google.com/file/d/1id0g-RYylTMBtnH3hTU0IiYi_N08CufW/view?usp=sharing">
-						113 學年度僑、港澳生招生管道說明及管道圖
+						114 學年度僑、港澳生招生管道說明及管道圖
 					</a>
 				</li>
-				<li class="list-group-item">
+				<!-- <li class="list-group-item">
 					<a target="_blank" href="https://docs.google.com/presentation/d/17w0VyTHkmxzWkjD4CA_-lFYz_31p-lrk/edit?usp=drive_link&ouid=112204737523361756979&rtpof=true&sd=true">
-						113 學年度名額暨簡章調查系統操作手冊
+						114 學年度名額暨簡章調查系統操作手冊
 					</a>
-				</li>
+				</li> -->
 				<!-- <li class="list-group-item">
 					<a target="_blank" href="https://bbb.ncnu.edu.tw/b/kcc-wh9-z4q">
 						系統操作問題諮詢視訊會議連結（8/16 上午 10:30）
@@ -85,17 +85,17 @@
 				</li> -->
 				<li class="list-group-item">
 					<a target="_blank" href="https://drive.google.com/file/d/109ZCkb6nMv7GYGeHNhmJqJoaxcR93XCz/view?usp=sharing">
-						教育部112年5月30日臺教高通字第1120048866號函(含填表說明)
+						教育部113年4月25日臺教高通字第1130038000號函(含填表說明)
 					</a>
 				</li>
 				<li class="list-group-item">
 					<a target="_blank" href="https://drive.google.com/file/d/1iYnkbjm0gql-5ivaPHVAxsDX5hXdyHFH/view?usp=sharing">
-						113招生名額增量申請表
+						114招生名額增量申請表
 					</a>
 				</li>
 				<li class="list-group-item">
-					<a target="_blank" href="https://drive.google.com/drive/folders/10XF_hZCIMZDRoEGI38wt2cNk_fZF3lp2?usp=drive_link">
-						各校上（112）年各學制校系分則規定
+					<a target="_blank" href="https://drive.google.com/drive/folders/1XVuUWrtS_joFRJ5jU_-bpt2sSDo9EfLZ?usp=drive_link">
+						各校上（113）年各學制校系分則規定
 					</a>
 				</li>
 				<li class="list-group-item">
