--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -316,6 +316,57 @@
 						<hr>
 
 						<div id="review-div">
+							<div id="form-interviewInfo">
+								<div>
+									<div class="card">
+										<div class="card-header bg-primary text-white">
+												面試資訊（若需要此項目，請勾選）
+										</div>
+										<div class="card-body">
+											<div class="card-block">
+												<div class="row">
+													<div class="col-lg-12">
+														<div class="form-group">
+															<div class="input-group">
+																<div class="input-group-prepend">
+																	<div class="input-group-text">
+																		<input type="checkbox" id="hasInterview">
+																	</div>
+																</div>
+																<input
+																type="text"
+																class="form-control"
+																style="background-color: white;"
+																value="學生是否需要面試（若是，請勾選）"
+																disabled>
+															</div>
+														</div>
+													</div>
+												</div>
+
+												<div class="row">
+													<div class="col-12">
+														<div class="form-group">
+															<label class="form-control-label" for="">面試項目中文說明</label>
+															<textarea class="form-control" rows="3" id="interview-description" placeholder="請輸入詳細說明，如......等"></textarea>
+														</div>
+													</div>
+												</div>
+
+												<div class="row">
+													<div class="col-12">
+														<div class="form-group">
+															<label for="">面試項目英文說明</label>
+															<textarea class="form-control" rows="3" id="interview-english-description" placeholder="Please enter a detailed description in English, such as ...... etc."></textarea>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<hr>
+								</div>
+							</div>
 
 							<div id="form-reviewItems">
 								<div v-for="type in reviewItemsTypes">
