面試項目說明 placeholder 文字修改

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -348,7 +348,7 @@
 													<div class="col-12">
 														<div class="form-group">
 															<label class="form-control-label" for="">面試項目中文說明</label>
-															<textarea class="form-control" rows="3" id="interview-description" placeholder="請輸入詳細說明，如......等"></textarea>
+															<textarea class="form-control" rows="4" id="interview-description" placeholder="請輸入詳細說明，如面試方式(採視訊或電話)、連結網址、時間/時段(可提醒提早準備、檢查設備)、面試提問內容等資訊，以利申請人提早準備、提高效率。"></textarea>
 														</div>
 													</div>
 												</div>
@@ -357,7 +357,7 @@
 													<div class="col-12">
 														<div class="form-group">
 															<label for="">面試項目英文說明</label>
-															<textarea class="form-control" rows="3" id="interview-english-description" placeholder="Please enter a detailed description in English, such as ...... etc."></textarea>
+															<textarea class="form-control" rows="4" id="interview-english-description" placeholder="Please use English to enter detailed description, such as the method  of interview (via video call or telephone), link URL, time/time slot (to remind applicants to prepare earlier and check their equipment), content of interview questions and other information. This will help applicants to prepare earlier and improve efficiency."></textarea>
 														</div>
 													</div>
 												</div>
