修改特定領域系所文字

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -194,17 +194,11 @@
 						<div class="row" id="specialDepatmentForm">
 								<div id="groupCodeForm" class="form-group col-6">
 									<label class="form-control-label text-danger" for="">
-										特定領域相關學系*
-										<i class="fa fa-question-circle text-dark"
-											aria-hidden="true" data-toggle="tooltip"
-											data-placement="top"
-											data-animation="false"
-											title="此選項將會影響聯合分發第二梯次馬來西亞獨中統考文憑學生成績採計"
-										></i>
+										是否為美術相關學系/餐飲相關學系*
 									</label>
 									<select class="form-control" id="specialDepartment">
-										<option value="">無</option>
-										<option value="藝術相關學系">藝術相關學系</option>
+										<option value="">否</option>
+										<option value="藝術相關學系">美術相關學系</option>
 										<option value="餐飲相關學系">餐飲相關學系</option>
 										<option hidden value="中醫學系">中醫學系</option>
 										<option hidden value="牙醫學系">牙醫學系</option>
